26 July 2025 [1.27am] - Speech-To-Text Integration + AR Keyboard Tutorial

--- a/Assets/Plugin/Android/AndroidManifest.xml
+++ b/Assets/Plugin/Android/AndroidManifest.xml
@@ -5,6 +5,7 @@
           package="com.DefaultCompany.TechTutor">
 
 	<uses-permission android:name="android.permission.CAMERA" />
+	<uses-permission android:name="android.permission.RECORD_AUDIO" />
 	<uses-feature android:name="android.hardware.camera.ar" android:required="true"/>
 
 	<application
