--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -13,6 +13,7 @@
     "com.unity.xr.arcore": "5.1.6",
     "com.unity.xr.arfoundation": "5.1.6",
     "com.unity.xr.management": "4.5.1",
+    "com.yasirkula.speechtotext": "https://github.com/yasirkula/UnitySpeechToText.git",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
